--- a/index.htm
+++ b/index.htm
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
   <link rel="shoticon" href="./favicon.ico" type="image/x-icon">
   <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1,user-scalable=0">
-  <meta name="author" content="微信公众号：颜家大少">
-  <meta name="email" content="3056432@qq.com">
+  <meta name="author" content="微信公众号：bugstack虫洞栈">
+  <meta name="email" content="184172133@qq.com">
   <meta name="description" content="Markdown排版利器，还能让Markdown内容，无需作任何调整就能同时在微信公众号、博客园、掘金、csdn等平台正确显示当前预览的效果">
   <title>Md2All</title>
   <script src="output/index.js-v=2_8_4"></script>
